--- a/afae24-assignment-02-template.ipynb
+++ b/afae24-assignment-02-template.ipynb
@@ -28,7 +28,9 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "warnings.filterwarnings(\"ignore\")\n",
-    "random.seed(12)\n",
+    "random.seed(0)\n",
+    "from sklearn.utils.validation import check_random_state\n",
+    "check_random_state(0)\n",
     "\n",
     "data_source = ACSDataSource(survey_year='2018', horizon='1-Year', survey='person')\n",
     "acs_data = data_source.get_data(states=[\"CA\"], download=True)\n",
@@ -100,9 +102,9 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "sample_indices = random.sample(range(len(features)), 20000)\n",
-    "features, labels = features.iloc[sample_indices], labels.iloc[sample_indices]\n",
+    "features1, labels1 = features.iloc[sample_indices], labels.iloc[sample_indices]\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(features, labels, test_size=0.2)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(features1, labels1, test_size=0.2, random_state=0)\n",
     "scaler = StandardScaler()\n",
     "scaler.fit(X_train)\n",
     "X_train = pd.DataFrame(columns= X_train.columns, data= scaler.transform(X_train), index = X_train.index)\n",
@@ -110,7 +112,7 @@
     "\n",
     "### Create one classifier to predict income on RAW DATA\n",
     "from sklearn.ensemble import GradientBoostingClassifier\n",
-    "gbc = GradientBoostingClassifier(n_estimators=100, learning_rate=1.0, max_depth=1)\n",
+    "gbc = GradientBoostingClassifier(n_estimators=100, learning_rate=1.0, max_depth=1, random_state=0)\n",
     "gbc.fit(X_train, y_train)\n",
     "\n",
     "### Report general accuracy \n",
@@ -124,7 +126,7 @@
     "print('Scores across all groups.')\n",
     "print('AUC: ', auc(fpr, tpr))\n",
     "print('Accuracy: ', preds)\n",
-    "print('Cross val score: ', cross_val_score(gbc, X_test, y_test))\n",
+    "print('Cross val score: ', cross_val_score(gbc, X_test, y_test).mean())\n",
     "print('---------------------------')\n",
     "\n",
     "### report accuracy for gender groups and races\n",
@@ -139,7 +141,7 @@
     "    temp_preds = gbc.predict(X_test_temp)\n",
     "    accuracy = accuracy_score(y_test_temp, temp_preds)\n",
     "    print(f'Accuracy for SEX {i}: {accuracy}')\n",
-    "    print('Cross val score: ', cross_val_score(gbc, X_test, y_test))\n",
+    "    print('Cross val score: ', cross_val_score(gbc, X_test, y_test).mean())\n",
     "    print('---------------------------')\n",
     "\n",
     "race_columns = [col for col in X_test.columns if \"RAC1P\" in col]\n",
@@ -154,8 +156,20 @@
     "    temp_preds = gbc.predict(X_test_temp)\n",
     "    accuracy = accuracy_score(y_test_temp, temp_preds)\n",
     "    print(f'Accuracy for RAC1P {i}: {accuracy}')\n",
-    "    print('Cross val score: ', cross_val_score(gbc, X_test_temp, y_test_temp))\n",
+    "    print('Cross val score: ', cross_val_score(gbc, X_test_temp, y_test_temp).mean())\n",
     "    print('---------------------------')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(features['RAC1P_Black or African American alone'].value_counts()/len(features))\n",
+    "print(features1['RAC1P_Black or African American alone'].value_counts()/len(features1))\n",
+    "print(features['SEX_Female'].value_counts()/len(features))\n",
+    "print(features1['SEX_Female'].value_counts()/len(features1))"
    ]
   },
   {
@@ -258,20 +272,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(10, 5))\n",
-    "sns.lineplot(data=stats, x = stats.index, y = stats['All'], label = 'All', markers=True)\n",
-    "sns.lineplot(data=stats, x = stats.index, y = 'Men', label = 'men', markers=True)\n",
-    "sns.lineplot(data=stats, x = stats.index, y = 'Women', label = 'Women', markers=True)\n",
-    "sns.lineplot(data=stats, x = stats.index, y = 'Black', label = 'Black', markers=True)\n",
-    "sns.lineplot(data=stats, x = stats.index, y = 'Non-Black', label = 'Non-Black', markers=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "### Build model using de-correlation effect from https://dl.acm.org/doi/10.1145/3375627.3375864\n",
     "\n",
     "### Record results and plot differences in accuracies\n"
@@ -282,7 +282,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.figure(figsize=(10, 5))\n",
+    "sns.lineplot(data=stats, x = stats.index, y = stats['All'], label = 'All', markers=True)\n",
+    "sns.lineplot(data=stats, x = stats.index, y = 'Men', label = 'men', markers=True)\n",
+    "sns.lineplot(data=stats, x = stats.index, y = 'Women', label = 'Women', markers=True)\n",
+    "sns.lineplot(data=stats, x = stats.index, y = 'Black', label = 'Black', markers=True)\n",
+    "sns.lineplot(data=stats, x = stats.index, y = 'Non-Black', label = 'Non-Black', markers=True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -353,10 +360,10 @@
     "        corr_ = np.nan_to_num(corr_, 0)\n",
     "\n",
     "# Plot correlations with protected features\n",
-    "# plt.figure(figsize=(4,15))\n",
-    "# sns.heatmap(corr_[:,-2:], cmap=\"coolwarm\", xticklabels=features.columns[-2:], vmin=-1, vmax=1)\n",
-    "# plt.title(\"Pearson's Correlation Coeff between SEX and components (Masked by p value)\")\n",
-    "# plt.show()"
+    "plt.figure(figsize=(4,15))\n",
+    "sns.heatmap(corr_[:,-2:], cmap=\"coolwarm\", xticklabels=features.columns[-2:], vmin=-1, vmax=1)\n",
+    "plt.title(\"Pearson's Correlation Coeff between SEX and components (Masked by p value)\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -395,10 +402,48 @@
     "Xs_test_debiased_non_black = Xs_test_debiased_p_df[Xs_test_debiased_p_df[31] < 0]\n",
     "y_test_black = y_test.iloc[Xs_test_debiased_black.index]\n",
     "y_test_non_black = y_test.iloc[Xs_test_debiased_non_black.index]\n",
-    "print(f'Accuracy Black:     {accuracy_score(y_test_black, gbc.predict(Xs_test_debiased_black.drop([30, 31], axis=1)))}')\n",
-    "print(f'Accuracy Non-Black: {accuracy_score(y_test_non_black, gbc.predict(Xs_test_debiased_non_black.drop([30, 31], axis=1)))}')\n",
-    "print(f'Accuracy Women:     {accuracy_score(y_test_women, gbc.predict(Xs_test_debiased_women.drop([30, 31], axis=1)))}')\n",
-    "print(f'Accuracy Men:       {accuracy_score(y_test_men, gbc.predict(Xs_test_debiased_men.drop([30, 31], axis=1)))}')"
+    "\n",
+    "accuracy_black = accuracy_score(y_test_black, gbc.predict(Xs_test_debiased_black.drop([30, 31], axis=1)))\n",
+    "accuracy_non_black = accuracy_score(y_test_non_black, gbc.predict(Xs_test_debiased_non_black.drop([30, 31], axis=1)))\n",
+    "accuracy_women = accuracy_score(y_test_women, gbc.predict(Xs_test_debiased_women.drop([30, 31], axis=1)))\n",
+    "accuracy_men = accuracy_score(y_test_men, gbc.predict(Xs_test_debiased_men.drop([30, 31], axis=1)))\n",
+    "print(f'Accuracy Black:     {accuracy_black}')\n",
+    "print(f'Accuracy Non-Black: {accuracy_non_black}')\n",
+    "print(f'Accuracy Women:     {accuracy_women}')\n",
+    "print(f'Accuracy Men:       {accuracy_men}')\n",
+    "\n",
+    "ethnic_diff = abs(accuracy_black - accuracy_non_black)\n",
+    "sex_diff = abs(accuracy_women - accuracy_men)\n",
+    "\n",
+    "print(f'Ethnic diff: {ethnic_diff}')\n",
+    "print(f'Gender diff: {sex_diff}')\n",
+    "\n",
+    "total_diff = 0\n",
+    "accuracies = [accuracy_black, accuracy_non_black, accuracy_women, accuracy_men]\n",
+    "for group_a in accuracies:\n",
+    "    for group_b in accuracies:\n",
+    "        total_diff += abs(group_a - group_b)\n",
+    "print(f'Total diff: {total_diff}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hardcoded original accuracies for comparison\n",
+    "accuracy_black = 0.785\n",
+    "accuracy_non_black = 0.832\n",
+    "accuracy_women = 0.805\n",
+    "accuracy_men = 0.85\n",
+    "\n",
+    "total_diff = 0\n",
+    "accuracies = [accuracy_black, accuracy_non_black, accuracy_women, accuracy_men]\n",
+    "for group_a in accuracies:\n",
+    "    for group_b in accuracies:\n",
+    "        total_diff += abs(group_a - group_b)\n",
+    "print(f'Total diff: {total_diff}')"
    ]
   }
  ],
