--- a/afae24-assignment-02-template.ipynb
+++ b/afae24-assignment-02-template.ipynb
@@ -452,17 +452,13 @@
     "\n",
     "        # Compute projection matrix (U)\n",
     "        Z = Xs_p\n",
-    "        #Z = Z - Z.mean(0) # Since we alredy standardised everything, there is not much sense in removing the mean\n",
+    "        # Z = Z - Z.mean(0) # Since we alredy standardised everything, there is not much sense in removing the mean\n",
     "        R = scipy.linalg.null_space(Z.T @ Xs)\n",
     "        eig_vals, L = scipy.linalg.eig(R.T @ Xs.T @ Xs @ R)\n",
     "        self.U = R @ L[:, :n_components]\n",
     "\n",
     "    def project(self, Xs):\n",
-    "        return Xs @ self.U\n",
-    "    \n",
-    "fair_pca = FairPCA(X_train.to_numpy(), [54, 55], 30)\n",
-    "Xs_train_debiased = fair_pca.project(X_train)\n",
-    "Xs_test_debiased = fair_pca.project(X_test)"
+    "        return Xs @ self.U"
    ]
   },
   {
@@ -471,21 +467,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Compute correlation matrix\n",
-    "Xs_train_debiased_p = np.concatenate([Xs_train_debiased, Xs_train_p], axis=1)\n",
-    "n_features = Xs_train_debiased_p.shape[1]\n",
-    "corr_ = np.zeros((n_features, n_features))\n",
-    "p_ = np.zeros((n_features, n_features))\n",
-    "for i in range(n_features):\n",
-    "    for j in range(n_features):\n",
-    "        corr_[i,j], p_[i,j] = pearsonr(Xs_train_debiased_p[:,i], Xs_train_debiased_p[:,j])\n",
-    "        corr_ = np.nan_to_num(corr_, 0)\n",
+    "pipe = Pipeline(steps=[('scaler', StandardScaler()), ('classifier', gbc)])\n",
     "\n",
-    "# Plot correlations with protected features\n",
-    "# plt.figure(figsize=(4,15))\n",
-    "# sns.heatmap(corr_[:,-2:], cmap=\"coolwarm\", xticklabels=features.columns[-2:], vmin=-1, vmax=1)\n",
-    "# plt.title(\"Pearson's Correlation Coeff between SEX and components (Masked by p value)\")\n",
-    "# plt.show()"
+    "# Do FairPCA from 53 and all the way down to 1 dimension, plotting for each dimension\n",
+    "fairPCA_graph_df = pd.DataFrame()\n",
+    "for i in reversed(range(1, 54)):\n",
+    "    # do fairPCA\n",
+    "    fair_pca = FairPCA(X_train.to_numpy(), [54, 55], i)\n",
+    "    X_train_debiased = fair_pca.project(X_train)\n",
+    "    X_test_debiased = fair_pca.project(X_test)\n",
+    "\n",
+    "    # fit model\n",
+    "    pipe.fit(X_train_debiased, y_train)\n",
+    "\n",
+    "    # seperate by groups\n",
+    "    test_women_idx = X_test[X_test['SEX_Female'] > 0].index\n",
+    "    X_test_debiased_women = X_test_debiased.iloc[test_women_idx, :]\n",
+    "    y_test_women = y_test.iloc[test_women_idx, :]\n",
+    "\n",
+    "    test_men_idx = X_test[X_test['SEX_Female'] < 0].index\n",
+    "    X_test_debiased_men = X_test_debiased.iloc[test_men_idx, :]\n",
+    "    y_test_men = y_test.iloc[test_men_idx, :]\n",
+    "\n",
+    "    test_black_idx = X_test[X_test['RAC1P_Black or African American alone'] > 0].index\n",
+    "    X_test_debiased_black = X_test_debiased.iloc[test_black_idx, :]\n",
+    "    y_test_black = y_test.iloc[test_black_idx, :]\n",
+    "\n",
+    "    test_non_black_idx = X_test[X_test['RAC1P_Black or African American alone'] < 0].index\n",
+    "    X_test_debiased_non_black = X_test_debiased.iloc[test_non_black_idx, :]\n",
+    "    y_test_non_black = y_test.iloc[test_non_black_idx, :]\n",
+    "\n",
+    "    # calculate accuracies\n",
+    "    accuracy_all = accuracy_score(y_test, pipe.predict(X_test_debiased))\n",
+    "    accuracy_women = accuracy_score(y_test_women, pipe.predict(X_test_debiased_women))\n",
+    "    accuracy_men = accuracy_score(y_test_men, pipe.predict(X_test_debiased_men))\n",
+    "    accuracy_black = accuracy_score(y_test_black, pipe.predict(X_test_debiased_black))\n",
+    "    accuracy_non_black = accuracy_score(y_test_non_black, pipe.predict(X_test_debiased_non_black))\n",
+    "\n",
+    "    # storing stats\n",
+    "    fairPCA_graph_df.loc[i, 'Accuracy All'] = accuracy_all\n",
+    "    fairPCA_graph_df.loc[i, 'Accuracy Women'] = accuracy_women\n",
+    "    fairPCA_graph_df.loc[i, 'Accuracy Men'] = accuracy_men\n",
+    "    fairPCA_graph_df.loc[i, 'Accuracy Black'] = accuracy_black\n",
+    "    fairPCA_graph_df.loc[i, 'Accuracy Non-Black'] = accuracy_non_black\n",
+    "\n",
+    "    # calcing and storing absolute differences\n",
+    "    abs_diff = 0\n",
+    "    groups = [accuracy_all, accuracy_women, accuracy_men, accuracy_black, accuracy_non_black]\n",
+    "    for group_a in groups:\n",
+    "        for group_b in groups:\n",
+    "            abs_diff += abs(group_a - group_b)\n",
+    "    fairPCA_graph_df.loc[i, 'Difference'] = abs_diff\n",
+    "\n",
+    "    # optional prints\n",
+    "    # print(f'========== Accuracies for {i} dimensions ==========')\n",
+    "    # print(f'Accuracy All:        {round(accuracy_all*100, 2)}')\n",
+    "    # print(f'Accuracy Women:      {round(accuracy_women*100, 2)}')\n",
+    "    # print(f'Accuracy Men:        {round(accuracy_men*100, 2)}')\n",
+    "    # print(f'Accuracy Black:      {round(accuracy_black*100, 2)}')\n",
+    "    # print(f'Accuracy Non-Black:  {round(accuracy_non_black*100, 2)}')\n",
+    "    # print(f'Absolute difference: {abs_diff}\\n')\n",
+    "\n",
+    "fairPCA_graph_df.head()"
    ]
   },
   {
@@ -493,13 +536,42 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# plot the accuracies\n",
+    "plt.figure(figsize=(7, 5))\n",
+    "sns.lineplot(data=fairPCA_graph_df, x=fairPCA_graph_df.index, y='Accuracy All', label='All', markers=True)\n",
+    "sns.lineplot(data=fairPCA_graph_df, x=fairPCA_graph_df.index, y='Accuracy Men', label='Men', markers=True)\n",
+    "sns.lineplot(data=fairPCA_graph_df, x=fairPCA_graph_df.index, y='Accuracy Women', label='Women', markers=True)\n",
+    "sns.lineplot(data=fairPCA_graph_df, x=fairPCA_graph_df.index, y='Accuracy Black', label='Black', markers=True)\n",
+    "sns.lineplot(data=fairPCA_graph_df, x=fairPCA_graph_df.index, y='Accuracy Non-Black', label='Non-Black', markers=True)\n",
+    "plt.title('Accuracies of FairPCA trained models with different dimensions')\n",
+    "plt.xlabel('Dimensions')\n",
+    "plt.ylabel('Accuracy')\n",
+    "# move legend to bottom right\n",
+    "plt.legend(loc='lower right')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot the absolute differences\n",
+    "plt.figure(figsize=(7, 5))\n",
+    "sns.lineplot(data=fairPCA_graph_df, x=fairPCA_graph_df.index, y='Difference', markers=True)\n",
+    "plt.title('Difference between groups at different dimensions')\n",
+    "plt.xlabel('Dimensions')\n",
+    "plt.ylabel('Absolute difference')\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Building classification model with reprojected data from FairPCA"
+    "## Correlation Coeff Visualizations on FairPCA down to 21 and 30 dimensions"
    ]
   },
   {
@@ -508,33 +580,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Adapted from previous code, some fuckery had to happen\n",
+    "def corr_vis(dim):\n",
+    "    fair_pca = FairPCA(X_train.to_numpy(), [54, 55], dim)\n",
+    "    Xs_train_debiased = fair_pca.project(X_train)\n",
     "\n",
-    "# convert to pandas DataFrames\n",
-    "Xs_train_debiased_p_df = pd.DataFrame(data=Xs_train_debiased_p)\n",
-    "Xs_test_debiased_p = np.concatenate([Xs_test_debiased, Xs_test_p], axis=1)\n",
-    "Xs_test_debiased_p_df = pd.DataFrame(data=Xs_test_debiased_p)\n",
+    "    # Compute correlation matrix\n",
+    "    Xs_train_debiased_p = np.concatenate([Xs_train_debiased, Xs_train_p], axis=1)\n",
+    "    n_features = Xs_train_debiased_p.shape[1]\n",
+    "    pear_corr_ = np.zeros((n_features, n_features))\n",
+    "    p_ = np.zeros((n_features, n_features))\n",
+    "    spear_corr_ = np.zeros((n_features, n_features))\n",
+    "    s_ = np.zeros((n_features, n_features))\n",
+    "    for i in range(n_features):\n",
+    "        for j in range(n_features):\n",
+    "            pear_corr_[i,j], p_[i,j] = pearsonr(Xs_train_debiased_p[:,i], Xs_train_debiased_p[:,j])\n",
+    "            pear_corr_ = np.nan_to_num(pear_corr_, 0)\n",
+    "            spear_corr_[i,j], s_[i,j] = spearmanr(Xs_train_debiased_p[:,i], Xs_train_debiased_p[:,j])\n",
+    "            spear_corr_ = np.nan_to_num(spear_corr_, 0)\n",
     "\n",
-    "# overall accuracy\n",
-    "gbc.fit(Xs_train_debiased_p_df.drop([30, 31], axis=1), y_train)\n",
-    "probs = gbc.predict_proba(Xs_test_debiased_p_df.drop([30, 31], axis=1))[:, 1]\n",
-    "fpr, tpr, thresholds = roc_curve(y_test, probs)\n",
-    "accuracy = accuracy_score(y_test, probs > 0.5)\n",
-    "print(f'Overall accuracy:   {accuracy}')\n",
+    "    # Plot pearson correlations with protected features\n",
+    "    plt.figure(figsize=(4,15))\n",
+    "    sns.heatmap(pear_corr_[:,-2:], cmap=\"bwr\", xticklabels=features.columns[-2:], vmin=-1, vmax=1)\n",
+    "    plt.title(\"Pearson's Correlation Coeff between protected variables and components (Masked by p value)\")\n",
+    "    plt.show()\n",
     "\n",
-    "# accuracy for the groups\n",
-    "Xs_test_debiased_women = Xs_test_debiased_p_df[Xs_test_debiased_p_df[30] > 0]\n",
-    "Xs_test_debiased_men = Xs_test_debiased_p_df[Xs_test_debiased_p_df[30] < 0]\n",
-    "y_test_men = y_test.iloc[Xs_test_debiased_men.index]\n",
-    "y_test_women = y_test.iloc[Xs_test_debiased_women.index]\n",
-    "Xs_test_debiased_black = Xs_test_debiased_p_df[Xs_test_debiased_p_df[31] > 0]\n",
-    "Xs_test_debiased_non_black = Xs_test_debiased_p_df[Xs_test_debiased_p_df[31] < 0]\n",
-    "y_test_black = y_test.iloc[Xs_test_debiased_black.index]\n",
-    "y_test_non_black = y_test.iloc[Xs_test_debiased_non_black.index]\n",
-    "print(f'Accuracy Black:     {accuracy_score(y_test_black, gbc.predict(Xs_test_debiased_black.drop([30, 31], axis=1)))}')\n",
-    "print(f'Accuracy Non-Black: {accuracy_score(y_test_non_black, gbc.predict(Xs_test_debiased_non_black.drop([30, 31], axis=1)))}')\n",
-    "print(f'Accuracy Women:     {accuracy_score(y_test_women, gbc.predict(Xs_test_debiased_women.drop([30, 31], axis=1)))}')\n",
-    "print(f'Accuracy Men:       {accuracy_score(y_test_men, gbc.predict(Xs_test_debiased_men.drop([30, 31], axis=1)))}')"
+    "    # Plot spearman correlations with protected features\n",
+    "    plt.figure(figsize=(4,15))\n",
+    "    sns.heatmap(spear_corr_[:,-2:], cmap=\"bwr\", xticklabels=features.columns[-2:], vmin=-1, vmax=1)\n",
+    "    plt.title(\"Spearman's Correlation Coeff between protected variables and components (Masked by p value)\")\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corr_vis(30)\n",
+    "corr_vis(21)"
    ]
   }
  ],
