--- a/afae24-assignment-02-template.ipynb
+++ b/afae24-assignment-02-template.ipynb
@@ -424,7 +424,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reprojecting data using FairPCA implementation from exercise 7 solution"
+    "## Reprojecting data using FairPCA\n",
+    "\n",
+    "We use the FairPCA method from the exercise 7 solution."
    ]
   },
   {
@@ -459,6 +461,23 @@
     "\n",
     "    def project(self, Xs):\n",
     "        return Xs @ self.U"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Running FairPCA + Calculating Accuracies and Absolute Differences\n",
+    "\n",
+    "Below cell loops from 54 to 1 $(i)$, and for each loop:\n",
+    " - Uses above FairPCA method to reproject the data down to $i$ dimensions\n",
+    " - Fits a new model to the reprojected data\n",
+    " - Seperates the data by the projected groups\n",
+    " - Calculates accuracies for each of the groups\n",
+    " - Calculates absolute difference of the accuracies between the groups\n",
+    " - Stores the accuracies and absolute difference into the Pandas DataFrame \"fairPCA_graph_df\" for later graphing\n",
+    "\n",
+    "The cell can take up to 10 minutes depending on your machine."
    ]
   },
   {
@@ -520,7 +539,7 @@
     "    fairPCA_graph_df.loc[i, 'Difference'] = abs_diff\n",
     "\n",
     "    # optional prints\n",
-    "    # print(f'========== Accuracies for {i} dimensions ==========')\n",
+    "    # print(f'========== Dimension {i} ==========')\n",
     "    # print(f'Accuracy All:        {round(accuracy_all*100, 2)}')\n",
     "    # print(f'Accuracy Women:      {round(accuracy_women*100, 2)}')\n",
     "    # print(f'Accuracy Men:        {round(accuracy_men*100, 2)}')\n",
@@ -532,12 +551,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plotting Accuracies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plot the accuracies\n",
     "plt.figure(figsize=(7, 5))\n",
     "sns.lineplot(data=fairPCA_graph_df, x=fairPCA_graph_df.index, y='Accuracy All', label='All', markers=True)\n",
     "sns.lineplot(data=fairPCA_graph_df, x=fairPCA_graph_df.index, y='Accuracy Men', label='Men', markers=True)\n",
@@ -550,6 +575,13 @@
     "# move legend to bottom right\n",
     "plt.legend(loc='lower right')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plotting Absolute Differences"
    ]
   },
   {
@@ -571,7 +603,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Correlation Coeff Visualizations on FairPCA down to 21 and 30 dimensions"
+    "### Correlation Coeff Visualizations on FairPCA down to 21 and 30 dimensions\n",
+    "\n",
+    "This ended up not making the cut for the paper due to max page limit.\n",
+    "\n",
+    "It is however interesting to see that pearsons correlation shows no correlations (even if the data is reprojected to the same dimensions as original), but the spearmans correlation shows there are still some correlations in the data."
    ]
   },
   {
