--- a/afae24-assignment-02-template.ipynb
+++ b/afae24-assignment-02-template.ipynb
@@ -260,7 +260,7 @@
     "protected_cols = ['RAC1P_Black or African American alone', 'SEX_Female']\n",
     "pipe = Pipeline(steps=[('classifier', gbc)])\n",
     "\n",
-    "lambdas = np.linspace(0, 10, 100)\n",
+    "lambdas = np.linspace(0, 1, 101)\n",
     "# lambdas = [0, 0.1, 1/3, 0.5, 2/3, 1, 2, 3, 4]\n",
     "for idx, i in enumerate(lambdas):\n",
     "    X_train_unprotected_debiased = debias_features(Xs_train_np, Xs_train_p, i)\n",
@@ -338,6 +338,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.legend?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "### Build model using de-correlation effect from https://dl.acm.org/doi/10.1145/3375627.3375864\n",
     "plt.figure(figsize=(7, 5))\n",
     "sns.lineplot(data=stats, x = stats.index, y = stats['All'], label = 'All', markers=True)\n",
@@ -348,8 +357,8 @@
     "plt.title(\"Accuracy of the model across different groups\")\n",
     "plt.xlabel(\"Lambda\")\n",
     "plt.ylabel(\"Accuracy\")\n",
-    "# move legend to upper left \n",
-    "plt.legend(loc='upper left')\n",
+    "# move legend to upper left\n",
+    "plt.legend(loc='lower right', ncols=5)\n",
     "plt.show()"
    ]
   },
@@ -409,8 +418,65 @@
     "sns.lineplot(x = stats.index, y = diff_sex, label = 'Sex')\n",
     "sns.lineplot(x = stats.index, y = overall_diff, label = 'Overall')\n",
     "plt.ylabel('% Difference')\n",
-    "plt.xlabel('Lambda Value')\n",
+    "plt.xlabel('Lambda')\n",
     "plt.title('Difference Between groups at Lambda Values')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pearson correlation plots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test(lambdas_):\n",
+    "    X_train_unprotected_debiased = debias_features(Xs_train_np, Xs_train_p, lambdas_)\n",
+    "    X_train_debiased = np.concatenate([X_train_unprotected_debiased, Xs_train_p], axis=1)\n",
+    "    n_features = X_train.shape[1]\n",
+    "    corr_ = np.zeros((n_features, n_features))\n",
+    "    p_ = np.zeros((n_features, n_features))\n",
+    "    for i in range(n_features):\n",
+    "        for j in range(n_features):\n",
+    "            corr_[i,j], p_[i,j] = pearsonr(X_train_debiased[:,i], X_train_debiased[:,j])\n",
+    "            corr_ = np.nan_to_num(corr_, 0)\n",
+    "    return corr_\n",
+    "    \n",
+    "corr1 = test(lambdas[0])\n",
+    "corr2 = test(lambdas[49])\n",
+    "corr3 = test(lambdas[99])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, (ax1, ax2, ax3) = plt.subplots(ncols=3)\n",
+    "\n",
+    "y = ['Gender', 'Race']\n",
+    "\n",
+    "sns.heatmap(corr1[:,54:], cmap=\"bwr\", xticklabels=y, vmin=-1, vmax=1, ax=ax1, cbar=False)\n",
+    "\n",
+    "sns.heatmap(corr2[:,54:], cmap=\"bwr\", xticklabels=y, vmin=-1, vmax=1, ax=ax2, cbar=False)\n",
+    "\n",
+    "sns.heatmap(corr3[:,54:], cmap=\"bwr\", xticklabels=y, vmin=-1, vmax=1, ax=ax3)\n",
+    "\n",
+    "fig.subplots_adjust(wspace=0.3)\n",
+    "\n",
+    "\n",
+    "# plt.suptitle('\\n'.join([\"Pearson's Correlation Coeff between SEX and other variables (Masked by p value)\"]), y=1.02)\n",
+    "ax1.set_title(\"lambda = \" + str(lambdas[0].round(1)), fontsize=10)\n",
+    "ax2.set_title(\"lambda = \" + str(lambdas[5].round(1)), fontsize=10)\n",
+    "ax3.set_title(\"lambda = \" + str(lambdas[10].round(1)), fontsize=10)\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -616,7 +682,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def corr_vis(dim):\n",
+    "def corr_vis(dim, return_=False):\n",
     "    fair_pca = FairPCA(X_train.to_numpy(), [54, 55], dim)\n",
     "    Xs_train_debiased = fair_pca.project(X_train)\n",
     "\n",
@@ -633,6 +699,10 @@
     "            pear_corr_ = np.nan_to_num(pear_corr_, 0)\n",
     "            spear_corr_[i,j], s_[i,j] = spearmanr(Xs_train_debiased_p[:,i], Xs_train_debiased_p[:,j])\n",
     "            spear_corr_ = np.nan_to_num(spear_corr_, 0)\n",
+    "    \n",
+    "    # return the spearman values for making later combined figure\n",
+    "    if return_:\n",
+    "        return spear_corr_[:,-2:], features.columns[-2:]\n",
     "\n",
     "    # Plot pearson correlations with protected features\n",
     "    plt.figure(figsize=(4,15))\n",
@@ -654,7 +724,37 @@
    "outputs": [],
    "source": [
     "corr_vis(30)\n",
+    "corr_vis(25)\n",
     "corr_vis(21)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, (ax1, ax2, ax3) = plt.subplots(ncols=3)\n",
+    "\n",
+    "x = ['Gender', 'Race']\n",
+    "\n",
+    "y, _ = corr_vis(30, return_=True)\n",
+    "sns.heatmap(y, cmap=\"bwr\", xticklabels=x, vmin=-1, vmax=1, ax=ax1, cbar=False)\n",
+    "\n",
+    "y, _ = corr_vis(25, return_=True)\n",
+    "sns.heatmap(y, cmap=\"bwr\", xticklabels=x, vmin=-1, vmax=1, ax=ax2, cbar=False)\n",
+    "\n",
+    "y, _ = corr_vis(21, return_=True)\n",
+    "sns.heatmap(y, cmap=\"bwr\", xticklabels=x, vmin=-1, vmax=1, ax=ax3)\n",
+    "\n",
+    "fig.subplots_adjust(wspace=0.3)\n",
+    "\n",
+    "# plt.suptitle('\\n'.join(['Spearman Correlation between protected variables and', 'components for different FairPCA dimensions']), y=1.02)\n",
+    "ax1.set_title('Dimension 30', fontsize=10)\n",
+    "ax2.set_title('Dimension 25', fontsize=10)\n",
+    "ax3.set_title('Dimension 21', fontsize=10)\n",
+    "\n",
+    "plt.show()"
    ]
   }
  ],
